git@github.com:AhmetBasari/Argorithms-bsc-js.git

--- a/Argorithms.html
+++ b/Argorithms.html
@@ -6,7 +6,7 @@
     <title>Algorithms fo Bsc Js</title>
 </head>
 <body>
-    <script src="Printarray.js" ></script>
+    <script src="Printtheelementsofanarray.js" ></script>
     
 </body>
 </html>
