Update-first commit

--- a/Argorithms.html
+++ b/Argorithms.html
@@ -6,7 +6,9 @@
     <title>Algorithms fo Bsc Js</title>
 </head>
 <body>
-    <script src="Printtheelementsofanarray.js" ></script>
+    <script src="Printtheelementsofanarray.js" >
+        
+    </script>
     
 </body>
 </html>
