--- a/Argorithms.html
+++ b/Argorithms.html
@@ -6,7 +6,7 @@
     <title>Algorithms fo Bsc Js</title>
 </head>
 <body>
-    <script src="Printtheelementsofanarray.js" >
+    <script src="6_Get Average.js" >
         
     </script>
     
