--- a/Argorithms.html
+++ b/Argorithms.html
@@ -6,9 +6,14 @@
     <title>Algorithms fo Bsc Js</title>
 </head>
 <body>
+    <h1 id="name">Ahmet</h1>
+    <input type="text" id="search" placeholder="search on google" >
+    <button id="btn">click me</button>
+    <div id="result" style="color: blue;"></div>
     <script src="6_Get Average.js" >
         
     </script>
-    
+    <script src="./script.js"></script>
+    <script src="./js.js" ></script>
 </body>
 </html>
